Fix footnote list nesting/spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,8 @@ pre {
     display: block;
     padding: 15px;
 }
-div.footnotes ol {
+div.footnotes > ol {
+    /* Don't indent top-level list of footnotes. Sublists can indent. */
     padding-left: 0;
 }
 a.newlink:after {
